--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -4329,7 +4329,9 @@ footer {
         grid-row: 19 / 23; 
         border: 1px solid rgba(0, 0, 0, 0.1);
         width: 100%;
-        height: 100%
+        height: 100%;
+        position: relative;
+        top: -3px;
     }
     
     .paragraph-title {
@@ -4343,21 +4345,21 @@ footer {
         grid-column: 1 / 2;
         grid-row: 23 / 24;
         position: relative;
-        top: 12px;
+        top: 10px;
     }
     
     .fp-1 {
         grid-column: 1 / 3;
         grid-row: 23 / 24;
         position: relative;
-        top: 43px;
+        top: 40px;
     }
     
     .video-container-1 {
         grid-column: 1 / 3;
         grid-row: 26 / 30;
         position: relative;
-        top: -45px;
+        top: -50px;
     }
     
     .position-box-1 {
@@ -4388,7 +4390,7 @@ footer {
         justify-self: left;
         width: 100%;
         position: relative;
-        top: -40px;
+        top: -45px;
     }
     
     .fp-2 {
@@ -4410,7 +4412,7 @@ footer {
         grid-column: 1 / 3;
         grid-row: 31 / 35;
         position: relative;
-        top: 30px;
+        top: 30 px;
     }
     
     .position-box-2 {
@@ -4454,7 +4456,7 @@ footer {
         grid-row: 39 / 40;
         align-self: start;
         position: relative;
-        top: -10px;
+        top: -20px;
     }
     
     .subtitle {
@@ -4479,26 +4481,26 @@ footer {
         grid-row: 39 / 42;
         margin-top: 9px;
         position: relative;
-        top: 40px;
+        top: 25px;
     }
     
     .visualize-goal {
         grid-column: 1 / 3;
-        grid-row: 43 / 44;
+        grid-row: 42 / 43;
         width: 100%;
         align-self: start;
         position: relative;
         margin-top: 0px;
-        top: -37px;
+        top: 20px;
         bottom: 0px;
     }
     
     .initial-goals {
         grid-column: 1 / 3;
-        grid-row: 45 / 46;
+        grid-row: 44 / 45;
         width: 100%;
         position: relative;
-        top: -34px;
+        top: 20px;
     }
 
     .fp-ig {
@@ -4513,7 +4515,7 @@ footer {
         position: relative;
         left: 15px;
         width: 98%;
-        top: 0px;
+        top: -25px;
     }
 
     
@@ -4526,14 +4528,14 @@ footer {
         grid-row: 51 / 52;
         align-self: start;
         position: relative;
-        top: 30px;
+        top: 20px;
     }
     
     .fp-5 {
         grid-column: 1 / 3;
         grid-row: 52 / 54;
         position: relative;
-        top: 35px;
+        top: 25px;
     }
     
     .video-container-3 {
@@ -4541,7 +4543,7 @@ footer {
         grid-row: 55 / 58;
         align-self: center;
         position: relative;
-        top: -5px;
+        top: -20px;
     }
     
     .position-box-3 {
@@ -4570,7 +4572,7 @@ footer {
         grid-row: 55 / 58;
         align-self: center;
         position: relative;
-        top: -5px;
+        top: -20px;
     }
     
     .position-box-4 {
@@ -4597,12 +4599,14 @@ footer {
         grid-column: 1 / 3;
         grid-row: 57 / 58;
         position: relative;
-        top: 25px;
+        top: 10px;
     }
     
     .video-container-4 {
         grid-column: 1 / 3;
         grid-row: 59 / 62;
+        position: relative;
+        top: -10px;
     }
     
     .position-box-5 {
@@ -4655,14 +4659,14 @@ footer {
         grid-row: 68 / 69;
         align-self: start;
         position: relative;
-        top: -10px;
+        top: 0px;
     }
     
     .fp-8 {
         grid-column: 1 / 3;
         grid-row: 69 / 70;
         position: relative;
-        top: -35px;
+        top: -25px;
     }
     
     .detailed-work {
@@ -4671,14 +4675,14 @@ footer {
         align-self: center;
         width: 100%;
         position: relative;
-        top: 25px;
+        top: 35px;
     }
     
     .little-detail-1 {
         grid-column: 1 / 3;
-        grid-row: 73 / 77;
+        grid-row: 74 / 78;
         position: relative;
-        top: 30px;
+        top: -20px;
         background-image: url(/product-tour-and-smartx-community/image/little-detail-1.png);
         background-size: cover;
         background-position: center top;
@@ -4704,7 +4708,7 @@ footer {
         align-self: center;
         width: 100%;
         position: relative;
-        top: 10px;
+        top: 30px;
     }
     
     .fp-9 {
@@ -4719,14 +4723,14 @@ footer {
         grid-column: 1 / 3;
         grid-row: 80 / 81;
         position: relative;
-        top: 23px;
+        top: 40px;
     }
     
     .fp-10 {
         grid-column: 1 / 3;
         grid-row: 81 / 83;
         position: relative;
-        top: 0px;
+        top: 15px;
     }
     
     .covers-video {
@@ -4734,7 +4738,7 @@ footer {
         grid-row: 84 / 85;
         width: 100%;
         position: relative;
-        top: -20px;
+        top: -5px;
     }
     
     .s-4 {
@@ -4754,13 +4758,15 @@ footer {
     .process-title-6 {
         grid-column: 1 / 3;
         grid-row: 88 / 89;
+        position: relative;
+        top: -20px;
     }
     
     .fp-11 {
         grid-column: 1 / 3;
         grid-row: 89 / 90;
         position: relative;
-        top: 0px;
+        top: -20px;
     }
     
     .flow-container {
@@ -4771,7 +4777,7 @@ footer {
         overflow-y: hidden;
         background-color: #e5e5e5;
         position: relative;
-        top: 30px;
+        top: 10px;
     }
     
     .flow-container::-webkit-scrollbar {
@@ -4796,7 +4802,7 @@ footer {
         grid-column: 1 / 3;
         grid-row: 104 / 105;
         position: relative;
-        top: 30px;
+        top: 10px;
     }
     
     .fp-12 {
@@ -4816,7 +4822,7 @@ footer {
         border-radius: 6.83px;
         z-index: 1;
         position: relative;
-        top: 40px;
+        top: 20px;
     }
     
     .all-community-works {
@@ -4825,7 +4831,7 @@ footer {
         align-self: end;
         width: 100%;
         position: relative;
-        top: 25px;
+        top: 20px;
     }
     
     .s-5 {
