--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -5644,3 +5644,742 @@ footer {
         align-self: end;
     }
 }
+
+@media (max-width: 325px) {
+    main {
+        gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(123, 68px);
+        padding: 30px;
+    }
+    
+    header {
+        background-image: url(/product-tour-and-smartx-community/image/product-tour-and-smartx-community.jpg);
+        background-size: cover;
+        background-position: center;
+        max-width: 1280px;
+        width: 100%;
+        height: 254px;
+        position: absolute;
+    }
+    
+    .header-image {
+        max-width: 768px;
+    }
+    
+    h1 {
+        grid-column: 1 / 3; 
+        grid-row: 4 / 7;
+        align-self: center;
+        font-size: 22px;
+        line-height: 29px;
+        font-weight: normal;
+        letter-spacing: -0.4px;
+        margin: 0px;
+        position: relative;
+        top: 20px;
+    }
+    
+    .bold-title {
+        letter-spacing: -0.3px;
+    }
+    
+    .seperator {
+        border-bottom: 1px solid #c6c6c6;
+    }
+    
+    .s-1 {
+        grid-column: 1 / 3;
+        grid-row: 7 / 8;
+        position: relative;
+        top: -25px;
+    }
+    
+    .work-info {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+        position: relative;
+        top: 10px;
+    }
+    
+    .info-name {
+        grid-column: 1 / 2;
+        grid-row: 8 / 9;
+        color: #acacac;
+        position: relative;
+        top: -25px;
+    }
+    
+    .info-content {
+        grid-column: 2 / 3;
+        grid-row: 8 / 9;
+        color: #000000;
+        width: 110%;
+        position: relative;
+        top: -25px;
+    }
+    
+    .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
+        margin-bottom: 7px;
+    }
+    
+    .work-description {
+        grid-column: 1 / 3;
+        grid-row: 9 / 15;
+        position: relative;
+        top: 20px;
+    }
+    
+    .work-description-paragraph:not(:last-child) {
+        margin-bottom: 10px;
+    } 
+    
+    p {
+        margin: 0px;
+    }
+    
+    .body-text {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+    }
+    
+    .quick-link {
+        grid-column: 1 / 2;
+        grid-row: 18 / 21;
+        list-style-type: none;
+        margin: 0px;
+        padding: 0px;
+        align-self: center;
+        position: relative;
+        top: 0px;
+    }
+    
+    .link {
+        font-size: 14px;
+        line-height: 14px;
+        color: #166ced;
+        text-decoration: none;
+    }
+    
+    .link:hover {
+        text-decoration: underline;
+    }
+    
+    .quick-link-item:not(:last-child) {
+        margin-bottom: 14px;
+    }
+    
+    .s-2 {
+        grid-column: 1 / 3;
+        grid-row: 20 / 21;
+        position: relative;
+        top: -15px;
+    }
+    
+    .section-title {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+        color: #acacac;
+        font-weight: normal;
+        margin: 0px;
+    }
+    
+    .st-1 {
+        grid-column: 1 / 2;
+        grid-row: 21 / 22;
+        position: relative;
+        top: -15px;
+    }
+    
+    .product-tour-prototype {
+        grid-column: 1 / 3;
+        grid-row: 22 / 26; 
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        width: 100%;
+        height: 100%;
+        position: relative;
+        top: -30px;
+    }
+    
+    .paragraph-title {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .pt-1 {
+        grid-column: 1 / 3;
+        grid-row: 26 / 27;
+        position: relative;
+        top: -20px;
+    }
+    
+    .fp-1 {
+        grid-column: 1 / 3;
+        grid-row: 26 / 27;
+        position: relative;
+        top: 10px;
+    }
+    
+    .video-container-1 {
+        grid-column: 1 / 3;
+        grid-row: 28 / 32;
+        position: relative;
+        top: 0px;
+    }
+    
+    .position-box-1 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-1 {
+        position: absolute;
+        width: 100%;
+        height: 92%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05), 0px 1px 5px rgba(0, 0, 0, 0.11);
+        z-index: 1;
+        overflow: hidden;
+        border-radius: 4px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .product-tour-video {
+        width: 100%;
+    }
+    
+    .feature-2 {
+        grid-column: 1 / 3;
+        grid-row: 31 / 32;
+        justify-self: left;
+        width: 100%;
+        position: relative;
+        top: 30px;
+    }
+    
+    .fp-2 {
+        margin-top: 6px;
+    }
+    
+    .feature-3 {
+        grid-column: 1 / 3;
+        grid-row: 37 / 38;
+        position: relative;
+        top: -30px;
+    }
+    
+    .fp-3 {
+        margin-top: 6px;
+    }
+    
+    .video-container-2 {
+        grid-column: 1 / 3;
+        grid-row: 33 / 37;
+        position: relative;
+        top: 20px;
+    }
+    
+    .position-box-2 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-2 {
+        position: absolute;
+        width: 100%;
+        height: 92%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05), 0px 1px 5px rgba(0, 0, 0, 0.11);
+        z-index: 2;
+        overflow: hidden;
+        border-radius: 4px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .smartx-community-video {
+        width: 100%;
+    }
+    
+    .s-3 {
+        grid-column: 1 / 3;
+        grid-row: 38 / 39;
+        position: relative;
+        top: 30px;
+    }
+    
+    .st-2 {
+        grid-column: 1 / 2;
+        grid-row: 39 / 40;
+        position: relative;
+        top: 30px;
+    }
+    
+    .process-title-1 {
+        grid-column: 1 / 3;
+        grid-row: 40 / 41;
+        align-self: start;
+        position: relative;
+        top: 20px;
+    }
+    
+    .subtitle {
+        font-size: 15px;
+        line-height: 15px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+        position: relative;
+        top: 1px;
+    }
+    
+    .process-title-text {
+        font-size: 19px;
+        line-height: 25px;
+        letter-spacing: -0.6px;
+        margin-top: 4px;
+        margin-bottom: 0px;
+    }
+    
+    .fp-4 {
+        grid-column: 1 / 3;
+        grid-row: 41 / 44;
+        margin-top: 9px;
+        position: relative;
+        top: -10px;
+    }
+    
+    .visualize-goal {
+        grid-column: 1 / 3;
+        grid-row: 44 / 45;
+        width: 100%;
+        align-self: start;
+        position: relative;
+        margin-top: 0px;
+        top: 5px;
+        bottom: 0px;
+    }
+    
+    .initial-goals {
+        grid-column: 1 / 3;
+        grid-row: 46 / 47;
+        width: 100%;
+        position: relative;
+        top: -20px;
+    }
+
+    .fp-ig {
+        margin-top: 6px;
+    }
+    
+    .goal-list {
+        grid-column: 1 / 3;
+        grid-row: 47 / 52;
+        margin-top: 0px;
+        padding: 0px;
+        position: relative;
+        left: 15px;
+        width: 98%;
+        top: 20px;
+    }
+
+    
+    .goal-list-item:not(:last-child) {
+        margin-bottom: 3px;
+    }
+    
+    .process-title-2 {
+        grid-column: 1 / 3;
+        grid-row: 54 / 55;
+        align-self: start;
+        position: relative;
+        top: 0px;
+    }
+    
+    .fp-5 {
+        grid-column: 1 / 3;
+        grid-row: 55 / 57;
+        position: relative;
+        top: 0px;
+    }
+    
+    .video-container-3 {
+        grid-column: 1 / 2;
+        grid-row: 58 / 61;
+        align-self: center;
+        position: relative;
+        top: 0px;
+    }
+    
+    .position-box-3 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-3 {
+        position: absolute;
+        width: 100%;
+        height: 71%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.06);
+        overflow: hidden;
+        border-radius: 2px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .original-prototype-video {
+        width: 100%;
+    }
+    
+    .image-container-1 {
+        grid-column: 2 / 3;
+        grid-row: 58 / 61;
+        align-self: center;
+        position: relative;
+        top: 0px;
+    }
+    
+    .position-box-4 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-4 {
+        position: absolute;
+        width: 100%;
+        height: 71%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.06);
+        border-radius: 2px;
+        overflow: hidden;
+    }
+    
+    .original-prototype-2 {
+        width: 100%;
+    }
+    
+    .fp-6 {
+        grid-column: 1 / 3;
+        grid-row: 60 / 61;
+        position: relative;
+        top: 20px;
+    }
+    
+    .video-container-4 {
+        grid-column: 1 / 3;
+        grid-row: 62 / 65;
+        position: relative;
+        top: -10px;
+    }
+    
+    .position-box-5 {
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+    }
+    
+    .position-container-5 {
+        position: absolute;
+        width: 100%;
+        height: 71.2%;
+        border: 1px solid #ffffff;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.08), 0px 2px 5px rgba(0, 0, 0, 0.08);
+        overflow: hidden;
+        border-radius: 3px;
+        -webkit-transform: translateZ(0);
+    }
+    
+    .original-prototype-decision {
+        width: 100%;
+    }
+    
+    .process-title-3 {
+        grid-column: 1 / 3;
+        grid-row: 65 / 66;
+        align-self: end; 
+        position: relative;
+        top: 0px;
+    }
+    
+    .fp-7 {
+        grid-column: 1 / 3;
+        grid-row: 66 / 67;
+        position: relative;
+        top: 0px;
+    }
+    
+    .varients-of-landing-page {
+        grid-column: 1 / 3;
+        grid-row: 68 / 69;
+        align-self: start;
+        width: 100%;
+        position: relative;
+        top: 30px;
+    }
+    
+    .process-title-4 {
+        grid-column: 1 / 3;
+        grid-row: 71 / 72;
+        align-self: start;
+        position: relative;
+        top: -30px;
+    }
+    
+    .fp-8 {
+        grid-column: 1 / 3;
+        grid-row: 72 / 73;
+        position: relative;
+        top: -30px;
+    }
+    
+    .detailed-work {
+        grid-column: 1 / 3;
+        grid-row: 74 / 75;
+        align-self: center;
+        width: 100%;
+        position: relative;
+        top: 30px;
+    }
+    
+    .little-detail-1 {
+        grid-column: 1 / 3;
+        grid-row: 76 / 80;
+        position: relative;
+        top: 40px;
+        background-image: url(/product-tour-and-smartx-community/image/little-detail-1.png);
+        background-size: cover;
+        background-position: center top;
+    }
+    
+    .line {
+        height: 1px;
+        width: 100%;
+        border: 1px solid #f5f5f5;
+        background-color: #7d7d7d;
+        position: relative;
+        top: 15px;
+    }
+    
+    .l-1 {
+        display: none;
+    }
+    
+    .detail-description-1 {
+        grid-column: 1 / 3;
+        grid-row: 81 / 82;
+        justify-self: right;
+        align-self: center;
+        width: 100%;
+        position: relative;
+        top: 15px;
+    }
+    
+    .fp-9 {
+        margin-top: 6px;
+    }
+    
+    .little-detail-1-2 {
+        display: none;
+    }
+    
+    .process-title-5 {
+        grid-column: 1 / 3;
+        grid-row: 83 / 84;
+        position: relative;
+        top: 20px;
+    }
+    
+    .fp-10 {
+        grid-column: 1 / 3;
+        grid-row: 84 / 85;
+        position: relative;
+        top: -5px;
+    }
+    
+    .covers-video {
+        grid-column: 1 / 3;
+        grid-row: 87 / 88;
+        width: 100%;
+        position: relative;
+        top: 20px;
+    }
+    
+    .s-4 {
+        grid-column: 1 / 3;
+        grid-row: 89 / 90;
+        position: relative;
+        top: 0px;
+    }
+    
+    .st-3 {
+        grid-column: 1 / 2;
+        grid-row: 90 / 91;
+        position: relative;
+        top: 0px;
+    }
+    
+    .process-title-6 {
+        grid-column: 1 / 3;
+        grid-row: 91 / 92;
+        position: relative;
+        top: 0px;
+    }
+    
+    .fp-11 {
+        grid-column: 1 / 3;
+        grid-row: 92 / 94;
+        position: relative;
+        top: 0px;
+    }
+    
+    .flow-container {
+        grid-column: 1 / 3;
+        grid-row: 96 / 104;
+        max-height: 480px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        background-color: #e5e5e5;
+        position: relative;
+        top: 20px;
+    }
+    
+    .flow-container::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+    
+    .flow-container::-webkit-scrollbar:horizontal {
+        height: 28px;
+    }
+    
+    .flow-container::-webkit-scrollbar-thumb {
+        border-radius: 14px;
+        border: 10px solid #e5e5e5;
+        background-color: rgba(0, 0, 0, .29);
+    }
+    
+    .flow {
+        height: 100%;
+    }
+    
+    .detail-description-2 {
+        grid-column: 1 / 3;
+        grid-row: 107 / 108;
+        position: relative;
+        top: 20px;
+    }
+    
+    .fp-12 {
+        margin-top: 6px;
+    }
+    
+    .l-2 {
+        display: none;
+    }
+    
+    .package-sent {
+        grid-column: 1 / 3;
+        grid-row: 103 / 107;
+        max-width: 330px;
+        width: 100%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.09), 0px 10px 30px rgba(0, 0, 0, 0.14);
+        border-radius: 6.83px;
+        z-index: 1;
+        position: relative;
+        top: 20px;
+    }
+    
+    .all-community-works {
+        grid-column: 1 / 3;
+        grid-row: 110 / 112;
+        align-self: end;
+        width: 100%;
+        position: relative;
+        top: -40px;
+    }
+    
+    .s-5 {
+        grid-column: 1 / 3;
+        grid-row: 112 / 113;
+        position: relative;
+        top: 0px;
+    }
+    
+    .st-4 {
+        grid-column: 1 / 2;
+        grid-row: 113 / 114;
+        position: relative;
+        top: 0px;
+    }
+    
+    .fp-13 {
+        grid-column: 1 / 3;
+        grid-row: 114 / 115;
+        position: relative;
+        top: 10px;
+    }
+    
+    .owc-1 {
+        grid-column: 1 / 2;
+        grid-row: 117 / 119;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-1.png);
+    }
+    
+    .owc-2 {
+        grid-column: 2 / 3;
+        grid-row: 117 / 119;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-2.png);
+    }
+    
+    .owc-3 {
+        grid-column: 1 / 2;
+        grid-row: 119 / 121;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-3.png);
+    }
+    
+    .owc-4 {
+        grid-column: 2 / 3;
+        grid-row: 119 / 121;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-4.png);
+    }
+    
+    .owc-5 {
+        grid-column: 1 / 2;
+        grid-row: 121 / 123;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-5.png);
+    }
+    
+    .owc-6 {
+        grid-column: 2 / 3;
+        grid-row: 121 / 123;
+        background-image: url(/product-tour-and-smartx-community/image/other-works-6.png);
+    }
+    
+    .other-works-container {
+        background-size: 90%;
+        background-repeat: no-repeat;
+        background-color: #000000;
+        background-position: center;
+    }
+    
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 123 / 124;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
+    }
+}
